# MirrorScan

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  env.template  init_db.py  main.py  pyproject.toml  requirements.txt  run.py  run_worker.py  setup.py  test_import.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/endpoints/: __init__.py  auth.py  scans.py
backend/app/core/: __init__.py  auth.py  config.py  deps.py  logging.py
backend/app/crud/: scan.py  user.py
backend/app/db/: init_db.py  memory_store.py  session.py
backend/app/models/: base.py  scan.py  user.py
backend/app/schemas/: scan.py
backend/app/services/: embedding_scanner.py  fingerprinting.py  forensics.py  guardrails.py  memory_scanner.py  redteam_agent.py  scanner.py
backend/scripts/: init_db.py  setup_db.py
backend/test_model/: vulnerable_model.py
design components/: package.json  tailwind.config.js
design components/app/: globals.css  page.tsx
design components/components/: layout.tsx
design components/components/ui/: stats-card.tsx  system-capabilities.tsx  terminal.tsx
design components/styles/: theme.css
nginx/conf.d/: default.conf
