[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mirrorscan"
version = "1.0.0"
authors = [
    { name = "MirrorScan Team" }
]
description = "AI Model Security Scanner"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
namespaces = false 